--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -37,9 +37,7 @@ jobs:
           node-version: "20.x"
           cache: 'pnpm'
       - name: Install pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 10
+        run: npm install -g pnpm
       - name: Install dependencies
         run: pnpm install
       - name: Build with Next.js
